@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-25T08:16:57Z",
+  "timestamp" : "2022-07-25T16:16:19Z",
   "count_outdated" : 414,
   "uniques_outdated" : 224,
   "count" : 435,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
