@@ -1,3 +1,10 @@
+2022-07-25T16:16:19Z:
+* notice: last 14d: unq all: 2 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 224 414 / 236 435
+* notice: next accum: outdated-unq outdated-all / unq all: 224 414 / 236 435
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-11 2022-07-25]
+
 2022-07-25T08:16:57Z:
 * notice: last 14d: unq all: 2 21
 * notice: prev accum: outdated-unq outdated-all / unq all: 224 414 / 235 435
